--- a/almundo-automation/pom.xml
+++ b/almundo-automation/pom.xml
@@ -39,11 +39,24 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<!--<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
-				<version>2.5</version> <configuration> <properties> <property> <name>usedefaultlisteners</name> 
-				<value>false</value> </property> <property> <name>listener</name> <value>org.uncommons.reportng.HTMLReporter, 
-				org.uncommons.reportng.JUnitXMLReporter</value> </property> </properties> 
-				<workingDirectory>target/</workingDirectory> </configuration> </plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<properties>
+						<property>
+							<name>usedefaultlisteners</name>
+							<value>false</value>
+						</property>
+						<property>
+							<name>listener</name>
+							<value>org.uncommons.reportng.HTMLReporter,org.uncommons.reportng.JUnitXMLReporter</value>
+						</property>
+					</properties>
+					<workingDirectory>target/</workingDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
